exercise1/k8-manifests/java-mysql-monitoring-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-mysql-monitoring-deployment
  labels:
    app: java-mysql-monitoring-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: java-mysql-monitoring-deployment
  template:
    metadata:
      labels:
        app: java-mysql-monitoring-deployment
    spec:
      containers:
        - name: java-mysql-monitoring
          image: garstiops/garstiges-secret-repo:java-mysql-monitoring-1.0
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: regcred
